--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
 
     <main>
-
+<div>test</div>
         <section id="activity" class="mx-32 my-8 flex flex-col flex-wrap gap-10 justify-center">
             <article class="w-96 bg-blue-400 flex flex-row">
                 <div class="card rounded-sm bg-slate-500 w-32 overflow-hidden">
