Just hardcoded different data into cards

--- a/index.html
+++ b/index.html
@@ -19,49 +19,74 @@
             </ul>
             <img class="object-contain h-14 w-14 rounded-md" src="https://yt3.googleusercontent.com/ytc/AL5GRJVARySiPSgJ4uPvuqS9GrYUXfGmR4PEtLY7356OuA=s900-c-k-c0x00ffffff-no-rj">
         </div>
-
     </nav>
 
     <main>
-<div>test</div>
+
+        <!--Activity section-->
         <section id="activity" class="mx-32 my-8 flex flex-col flex-wrap gap-10 justify-center">
-            <article class="w-96 bg-blue-400 flex flex-row">
+            <!--Activity card-->
+            <article class="activity-post w-96 bg-blue-400 flex flex-row">
                 <div class="card rounded-sm bg-slate-500 w-32 overflow-hidden">
-                    <img class="object-contain w-30" src="./img/naruto.jpg">
+                    <img class="object-contain w-32" src="./img/naruto.jpg">
                     <p>Naruto</p>
                 </div>
-                <div class="flex activity-message max-h-4">
+                <!--Card message-->
+                <div class="flex flex-col activity-message">
                     <strong>Username</strong>
-                    <p>Watched episode "4-7"</p>
+                    <p>"Watched episode" [4]</p>
                 </div>
-
             </article>
             
-            <article>
+            <!--Activity card-->
+            <article class="activity-post w-96 bg-blue-400 flex flex-row">
                 <div class="card rounded-sm bg-slate-500 w-32 overflow-hidden">
-                    <img class="object-contain w-30" src="./img/naruto.jpg">
-                    <p>Naruto</p>
+                    <img class="object-contain w-32" src="./img/bleach.jpg">
+                    <p>Bleach</p>
+                </div>
+                <!--Card message-->
+                <div class="flex flex-col activity-message">
+                    <strong>Username</strong>
+                    <p>"Watched episode" [123]</p>
                 </div>
             </article>
 
-            <article>
+            <!--Activity card-->
+            <article class="activity-post w-96 bg-blue-400 flex flex-row">
                 <div class="card rounded-sm bg-slate-500 w-32 overflow-hidden">
-                    <img class="object-contain w-30" src="./img/naruto.jpg">
-                    <p>Naruto</p>
+                    <img class="object-contain w-32" src="./img/onepiece.jpg">
+                    <p>One Piece</p>
+                </div>
+                <!--Card message-->
+                <div class="flex flex-col activity-message">
+                    <strong>Username</strong>
+                    <p>"Watched episode" [1010]</p>
                 </div>
             </article>
 
-            <article>
+            <!--Activity card-->
+            <article class="activity-post w-96 bg-blue-400 flex flex-row">
                 <div class="card rounded-sm bg-slate-500 w-32 overflow-hidden">
-                    <img class="object-contain w-30" src="./img/naruto.jpg">
-                    <p>Naruto</p>
+                    <img class="object-contain w-32" src="./img/3gatsunolion.jpg">
+                    <p>3-gatsu no lion</p>
+                </div>
+                <!--Card message-->
+                <div class="flex flex-col activity-message">
+                    <strong>Username</strong>
+                    <p>"Completed"</p>
                 </div>
             </article>
 
-            <article>
+            <!--Activity card-->
+            <article class="activity-post w-96 bg-blue-400 flex flex-row">
                 <div class="card rounded-sm bg-slate-500 w-32 overflow-hidden">
-                    <img class="object-contain w-30" src="./img/naruto.jpg">
-                    <p>Naruto</p>
+                    <img class="object-contain w-32" src="./img/initiald.jpg">
+                    <p>Initial D</p>
+                </div>
+                <!--Card message-->
+                <div class="flex flex-col activity-message">
+                    <strong>Username</strong>
+                    <p>"Is planning"</p>
                 </div>
             </article>
         </section>
